Make code blocks wrapped in a link stop covering up any sign its a link.

--- a/src/css/roundups.css
+++ b/src/css/roundups.css
@@ -5,3 +5,7 @@
 .hero h1 {
     font-size: 6rem;
 }
+
+article li a code {
+    display: initial;
+}
